// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Handler Should add dataset property then export then import 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": undefined,
        "tail": undefined,
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "11",
          Data {
            "id": "11",
            "name": "testPool1/home",
            "poolGuid": "0x2D28F440E514007F",
          },
        ],
        "tag": 1,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add dataset property then export then import 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": undefined,
        "tail": undefined,
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "11",
          Data {
            "id": "11",
            "name": "testPool1/home",
            "poolGuid": "0x2D28F440E514007F",
          },
        ],
        "tag": 1,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "EXPORTED",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add dataset property then export then import 3`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": undefined,
        "tail": undefined,
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "11",
          Data {
            "id": "11",
            "name": "testPool1/home",
            "poolGuid": "0x2D28F440E514007F",
          },
        ],
        "tag": 1,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add dataset property then export then import 4`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add multiple pool properties then add two datasets with multiple properties then export then import 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": ZfsProperty {
          "name": "readonly",
          "poolGuid": "0x2D28F440E514007F",
          "value": "1",
          "zfsId": "11",
        },
        "tail": List {
          "head": ZfsProperty {
            "name": "canmount",
            "poolGuid": "0x2D28F440E514007F",
            "value": "1",
            "zfsId": "69",
          },
          "tail": List {
            "head": ZfsProperty {
              "name": "readonly",
              "poolGuid": "0x2D28F440E514007F",
              "value": "0",
              "zfsId": "69",
            },
            "tail": List {
              "head": ZpoolProperty {
                "name": "multihost",
                "poolGuid": "0x2D28F440E514007F",
                "value": "0",
              },
              "tail": List {
                "head": ZpoolProperty {
                  "name": "failmode",
                  "poolGuid": "0x2D28F440E514007F",
                  "value": "1",
                },
                "tail": List {
                  "head": undefined,
                  "tail": undefined,
                },
              },
            },
          },
        },
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "69",
          Data {
            "id": "69",
            "name": "testPool1/backup",
            "poolGuid": "0x2D28F440E514007F",
          },
          MapTree {
            "data": Array [
              "11",
              Data {
                "id": "11",
                "name": "testPool1/home",
                "poolGuid": "0x2D28F440E514007F",
              },
            ],
            "tag": 1,
          },
          MapTree {
            "data": undefined,
            "tag": 0,
          },
          2,
        ],
        "tag": 2,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add multiple pool properties then add two datasets with multiple properties then export then import 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": ZfsProperty {
          "name": "readonly",
          "poolGuid": "0x2D28F440E514007F",
          "value": "1",
          "zfsId": "11",
        },
        "tail": List {
          "head": ZfsProperty {
            "name": "canmount",
            "poolGuid": "0x2D28F440E514007F",
            "value": "1",
            "zfsId": "69",
          },
          "tail": List {
            "head": ZfsProperty {
              "name": "readonly",
              "poolGuid": "0x2D28F440E514007F",
              "value": "0",
              "zfsId": "69",
            },
            "tail": List {
              "head": ZpoolProperty {
                "name": "multihost",
                "poolGuid": "0x2D28F440E514007F",
                "value": "0",
              },
              "tail": List {
                "head": ZpoolProperty {
                  "name": "failmode",
                  "poolGuid": "0x2D28F440E514007F",
                  "value": "1",
                },
                "tail": List {
                  "head": undefined,
                  "tail": undefined,
                },
              },
            },
          },
        },
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "69",
          Data {
            "id": "69",
            "name": "testPool1/backup",
            "poolGuid": "0x2D28F440E514007F",
          },
          MapTree {
            "data": Array [
              "11",
              Data {
                "id": "11",
                "name": "testPool1/home",
                "poolGuid": "0x2D28F440E514007F",
              },
            ],
            "tag": 1,
          },
          MapTree {
            "data": undefined,
            "tag": 0,
          },
          2,
        ],
        "tag": 2,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "EXPORTED",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add multiple pool properties then add two datasets with multiple properties then export then import 3`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": ZfsProperty {
          "name": "readonly",
          "poolGuid": "0x2D28F440E514007F",
          "value": "1",
          "zfsId": "11",
        },
        "tail": List {
          "head": ZfsProperty {
            "name": "canmount",
            "poolGuid": "0x2D28F440E514007F",
            "value": "1",
            "zfsId": "69",
          },
          "tail": List {
            "head": ZfsProperty {
              "name": "readonly",
              "poolGuid": "0x2D28F440E514007F",
              "value": "0",
              "zfsId": "69",
            },
            "tail": List {
              "head": ZpoolProperty {
                "name": "multihost",
                "poolGuid": "0x2D28F440E514007F",
                "value": "0",
              },
              "tail": List {
                "head": ZpoolProperty {
                  "name": "failmode",
                  "poolGuid": "0x2D28F440E514007F",
                  "value": "1",
                },
                "tail": List {
                  "head": undefined,
                  "tail": undefined,
                },
              },
            },
          },
        },
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "69",
          Data {
            "id": "69",
            "name": "testPool1/backup",
            "poolGuid": "0x2D28F440E514007F",
          },
          MapTree {
            "data": Array [
              "11",
              Data {
                "id": "11",
                "name": "testPool1/home",
                "poolGuid": "0x2D28F440E514007F",
              },
            ],
            "tag": 1,
          },
          MapTree {
            "data": undefined,
            "tag": 0,
          },
          2,
        ],
        "tag": 2,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add multiple pool properties then add two datasets with multiple properties then export then import 4`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZfsProperty {
        "name": "canmount",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
        "zfsId": "11",
      },
      "tail": List {
        "head": ZfsProperty {
          "name": "readonly",
          "poolGuid": "0x2D28F440E514007F",
          "value": "1",
          "zfsId": "11",
        },
        "tail": List {
          "head": ZfsProperty {
            "name": "canmount",
            "poolGuid": "0x2D28F440E514007F",
            "value": "1",
            "zfsId": "69",
          },
          "tail": List {
            "head": ZfsProperty {
              "name": "readonly",
              "poolGuid": "0x2D28F440E514007F",
              "value": "0",
              "zfsId": "69",
            },
            "tail": List {
              "head": ZpoolProperty {
                "name": "multihost",
                "poolGuid": "0x2D28F440E514007F",
                "value": "0",
              },
              "tail": List {
                "head": ZpoolProperty {
                  "name": "failmode",
                  "poolGuid": "0x2D28F440E514007F",
                  "value": "1",
                },
                "tail": List {
                  "head": ZpoolProperty {
                    "name": "multihost",
                    "poolGuid": "0x2D28F440E514007F",
                    "value": "1",
                  },
                  "tail": List {
                    "head": ZfsProperty {
                      "name": "canmount",
                      "poolGuid": "0x2D28F440E514007F",
                      "value": "1",
                      "zfsId": "11",
                    },
                    "tail": List {
                      "head": undefined,
                      "tail": undefined,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "69",
          Data {
            "id": "69",
            "name": "testPool1/backup",
            "poolGuid": "0x2D28F440E514007F",
          },
          MapTree {
            "data": Array [
              "11",
              Data {
                "id": "11",
                "name": "testPool1/home",
                "poolGuid": "0x2D28F440E514007F",
              },
            ],
            "tag": 1,
          },
          MapTree {
            "data": undefined,
            "tag": 0,
          },
          2,
        ],
        "tag": 2,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add multiple pool properties then add two datasets with multiple properties then export then import 5`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add pool property then export then import 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZpoolProperty {
        "name": "multihost",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
      },
      "tail": List {
        "head": undefined,
        "tail": undefined,
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add pool property then export then import 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZpoolProperty {
        "name": "multihost",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
      },
      "tail": List {
        "head": undefined,
        "tail": undefined,
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "EXPORTED",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add pool property then export then import 3`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": ZpoolProperty {
        "name": "multihost",
        "poolGuid": "0x2D28F440E514007F",
        "value": "0",
      },
      "tail": List {
        "head": undefined,
        "tail": undefined,
      },
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add pool property then export then import 4`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add then remove a device path 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1",
          UEvent {
            "DEVNAME": "/dev/sdb1",
            "DEVPATH": "/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1",
            "DEVTYPE": "partition",
            "DM_LV_NAME": "swap",
            "DM_MULTIPATH_DEVICE_PATH": true,
            "DM_UUID": "LVM-pV8TgNKMJVNrolJgMhVwg4CAeFFAIMC83IU1hvimWWlvmd5xQddtMIqRtjwOuKTz",
            "DM_VG_NAME": "centos",
            "ID_FS_TYPE": "LVM2_member",
            "ID_FS_USAGE": "filesystem",
            "ID_MODEL": "VBOX_HARDDISK",
            "ID_PART_ENTRY_NUMBER": 1,
            "ID_SERIAL": "VBOX_HARDDISK_VB304a0a0f-15e93f07",
            "ID_VENDOR": null,
            "IML_DM_SLAVE_MMS": Array [],
            "IML_DM_VG_SIZE": null,
            "IML_IS_RO": true,
            "IML_MD_DEVICES": Array [],
            "IML_SCSI_80": "80",
            "IML_SCSI_83": "83",
            "IML_SIZE": "81784832",
            "MAJOR": "8",
            "MD_UUID": null,
            "MINOR": "17",
            "PATHS": Array [
              "/dev/sdb1",
              "/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1",
              "/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1",
            ],
          },
        ],
        "tag": 1,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add then remove a device path 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add then remove a zdataset 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "11",
          Data {
            "id": "11",
            "name": "testPool1/home",
            "poolGuid": "0x2D28F440E514007F",
          },
        ],
        "tag": 1,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add then remove a zdataset 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add then remove a zpool 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should add then remove a zpool 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should call end with map for info event 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should end on a bad match 1`] = `"Handler got a bad match"`;

exports[`Data Handler Should export then import zpool with datasets 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "11",
          Data {
            "id": "11",
            "name": "testPool1/home",
            "poolGuid": "0x2D28F440E514007F",
          },
        ],
        "tag": 1,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "EXPORTED",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should export then import zpool with datasets 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "11",
          Data {
            "id": "11",
            "name": "testPool1/home",
            "poolGuid": "0x2D28F440E514007F",
          },
        ],
        "tag": 1,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should export then import zpool with datasets 3`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "EXPORTED",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should export then import zpool with datasets 4`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should import then export then import a zpool 1`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should import then export then import a zpool 2`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "EXPORTED",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;

exports[`Data Handler Should import then export then import a zpool 3`] = `
Result {
  "data": Data {
    "blockDevices": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "props": List {
      "head": undefined,
      "tail": undefined,
    },
    "zfs": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": undefined,
        "tag": 0,
      },
    },
    "zpools": FableMap {
      "comparer": Comparer {
        "Compare": [Function],
      },
      "tree": MapTree {
        "data": Array [
          "0x2D28F440E514007F",
          Data {
            "guid": "0x2D28F440E514007F",
            "name": "testPool1",
            "state": "ACTIVE",
          },
        ],
        "tag": 1,
      },
    },
  },
  "tag": 0,
}
`;
